--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 
 # Card User Database
-spring.card.datasource.username=carduser
+spring.card.datasource.username=cardadmin
 spring.card.datasource.password=password
 spring.card.datasource.url=jdbc:mysql://127.0.0.1:3306/card?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.card.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Card Holder Database
-spring.cardholder.datasource.username=cardholderuser
+spring.cardholder.datasource.username=cardholderadmin
 spring.cardholder.datasource.password=password
 spring.cardholder.datasource.url=jdbc:mysql://127.0.0.1:3306/cardholder?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.cardholder.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Pan Database
-spring.pan.datasource.username=panuser
+spring.pan.datasource.username=panadmin
 spring.pan.datasource.password=password
 spring.pan.datasource.url=jdbc:mysql://127.0.0.1:3306/pan?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.pan.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
